src/test/ui/const-generics/raw-ptr-const-param.full.stderr
error[E0741]: using raw pointers as const generic parameters is forbidden
  --> $DIR/raw-ptr-const-param.rs:6:23
   |
LL | struct Const<const P: *const u32>;
   |                       ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0741`.
